Detect paths with ~